# file_previewer_poc

./: .gitignore  LICENCE.txt  MANIFEST.in  README.md  README.txt  development.ini  doc.html  doc.md  requirements.txt  setup.cfg  setup.py  t.py  test.ini
migration/: env.py
preview_generator/: __init__.py
preview_generator/config/: app_cfg.py  environment.py  middleware.py
preview_generator/controllers/: __init__.py  controller.py.template  documents.py  file_converter.py  pages.py  previews_type.py  root.py
preview_generator/lib/: helpers.py
preview_generator/model/: __init__.py  auth.py  builder.py  factory.py  file_converter.py  manager.py  model.py.template  preview.py
preview_generator/model/preview/: __init__.py  bmp_preview.py  generic_preview.py  gif_preview.py  jpeg_preview.py  odt_preview.py  pdf_preview.py  png_preview.py  text_preview.py  zip_preview.py
preview_generator/public/img/: 7  9
preview_generator/templates/: documents.mak  get_one_document.mak  get_one_page.mak  index.mak  large.mak  pages.mak  small.mak  text.mak
preview_generator/tests/: __init__.py
preview_generator/tests/functional/: test_authentication.py  test_root.py
preview_generator/tests/models/: __init__.py  test_auth.py
preview_generator/websetup/: __init__.py  bootstrap.py  schema.py
