[nosetests]
verbosity = 2
detailed-errors = 1
with-coverage = false
cover-erase = true
cover-package = preview_generator

# Babel configuration
[compile_catalog]
domain = preview_generator
directory = preview_generator/i18n
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = preview_generator/i18n/preview_generator.pot
width = 80
keywords = l_

[init_catalog]
domain = preview_generator
input_file = preview_generator/i18n/preview_generator.pot
output_dir = preview_generator/i18n

[update_catalog]
domain = preview_generator
input_file = preview_generator/i18n/preview_generator.pot
output_dir = preview_generator/i18n
previous = true

# Static files extraction for TW
[archive_tw_resources]
output = preview_generator/public/toscawidgets/
distributions = preview_generator
#yuicompressor = /home/someuser/bin/yuicompressor.jar
#compresslevel = 2
onepass = true

[archive_tw2_resources]
output = preview_generator/public/tw2/
distributions = preview_generator
force = true
#yuicompressor = /home/someuser/bin/yuicompressor.jar
#compresslevel = 2
onepass = true

[aliases]
# A handy alias to make a release to pypi
release = egg_info -RDb "" sdist bdist_egg register upload

[metadata]
description-file = README.txt